# openai_realtime_api_chatbot

./: README.md  config.py  main.py  prompt.py  pyproject.toml
